feat(docker): Add registry authentication support for private Docker registries